# full-stack-auth-fast-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: backend-deploy.yml  deploy.yml
app/: main.py
app/agents/: agent.py  llm.py  prompts.py  react_graph.py  tools.py
app/api/v1/: router.py
app/api/v1/auth/: router.py
app/api/v1/chats/: router.py
app/api/v1/companies/: router.py
app/api/v1/users/: router.py
app/core/: config.py  database.py  security.py
app/dependencies/: auth.py
app/migrations/: env.py
app/migrations/versions/: 3772ce949c9b_initial_migration.py  b4e8f2a91c3d_add_hr_tables.py  c7a1d3e85f02_employee_range.py  d9b4e7f12a3c_add_chat_tables.py
app/models/: __init__.py  attendance.py  chat.py  chat_message.py  company.py  employee.py  leave.py  mixins.py  payroll.py  performance.py  refresh_token.py  user.py
app/repositories/: attendance_repository.py  chat_repository.py  company_repository.py  employee_repository.py  leave_repository.py  payroll_repository.py  performance_repository.py  refresh_token_repository.py  user_repository.py
app/schemas/: attendance.py  auth.py  chat.py  company.py  employee.py  leave.py  payroll.py  performance.py  user.py
app/services/: ai_service.py  auth_service.py  chat_service.py  company_service.py  employee_service.py  google_oauth_service.py  hr_service.py  jwt_service.py  storage_service.py
