[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "google-auth>=2.53.0",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.34.2",
    "sqlalchemy[asyncio]>=2.0.50",
    "supabase>=2.10.0",
    "uvicorn[standard]>=0.48.0",
]
